--- a/Holly/.gitignore
+++ b/Holly/.gitignore
@@ -5,14 +5,17 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+.idea
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
+.idea/vcs.xml
 .idea/libraries/
 *.iws
 *.iml
 *.ipr
 out/
+logs/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
