--- a/Holly/build.gradle
+++ b/Holly/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
